--- a/MyPetShop/MyPetShop.csproj
+++ b/MyPetShop/MyPetShop.csproj
@@ -199,10 +199,18 @@
     <Compile Include="Migrations\201710191702367_InitialModels.Designer.cs">
       <DependentUpon>201710191702367_InitialModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710191748596_AddTablePetAndCategoryAndPetImages.cs" />
+    <Compile Include="Migrations\201710191748596_AddTablePetAndCategoryAndPetImages.Designer.cs">
+      <DependentUpon>201710191748596_AddTablePetAndCategoryAndPetImages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\CategoryPet.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Pet.cs" />
+    <Compile Include="Models\PetImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -286,7 +294,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\superfish.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -341,6 +351,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201710191702367_InitialModels.resx">
       <DependentUpon>201710191702367_InitialModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710191748596_AddTablePetAndCategoryAndPetImages.resx">
+      <DependentUpon>201710191748596_AddTablePetAndCategoryAndPetImages.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
