--- a/MyPetShop/MyPetShop.csproj
+++ b/MyPetShop/MyPetShop.csproj
@@ -360,6 +360,7 @@
     <Content Include="Views\Pet\Index.cshtml" />
     <Content Include="Views\Pet\Products.cshtml" />
     <Content Include="Views\Pet\Category.cshtml" />
+    <Content Include="Views\Pet\PetDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
