show listmenu and list other product

--- a/MyPetShop/MyPetShop.csproj
+++ b/MyPetShop/MyPetShop.csproj
@@ -361,6 +361,8 @@
     <Content Include="Views\Pet\Products.cshtml" />
     <Content Include="Views\Pet\Category.cshtml" />
     <Content Include="Views\Pet\PetDetails.cshtml" />
+    <Content Include="Views\Pet\ListCategory.cshtml" />
+    <Content Include="Views\Pet\ListOtherProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
